[package]
name = "server"
version = "0.1.0"
authors = ["alecsavvy <alecsavvy@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
darkredis = "0.7.0"
num_cpus = "1.13.0"
rusoto_sqs = "0.45.0"
rusoto_core = "0.45.0"