[package]
name = "server"
version = "0.1.0"
authors = ["alecsavvy <alecsavvy@outlook.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["macros"] }
darkredis = "0.7.0"
num_cpus = "1.13.0"
reqwest = "0.10.7"
rusoto_sqs = "0.45.0"
rusoto_core = "0.45.0"
serde = { version = "1.0.115", features = [ "derive" ] }
serde_json = "1.0.57"
uuid = { version = "0.8.1", features = [ "v4", "serde" ]}